bk_ida/gccida/c2/find_if_header
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2469:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2469:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2471:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2471:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2482:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v48; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2487:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v53; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2512:4: error: expected ';' after expression
rtx v78; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2512:5: error: use of undeclared identifier 'v78'
rtx v78; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2518:4: error: expected ';' after expression
rtx pool_constant; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2518:5: error: use of undeclared identifier 'pool_constant'; did you mean 'get_pool_constant'?
rtx pool_constant; // r15 
    ^~~~~~~~~~~~~
    get_pool_constant
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/rtl.h:1305:12: note: 'get_pool_constant' declared here
extern rtx get_pool_constant            PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2519:4: error: expected ';' after expression
rtx v85; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2519:5: error: use of undeclared identifier 'v85'
rtx v85; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2520:4: error: expected ';' after expression
rtx v86; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2520:5: error: use of undeclared identifier 'v86'
rtx v86; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2527:4: error: expected ';' after expression
rtx v93; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2527:5: error: use of undeclared identifier 'v93'
rtx v93; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2534:4: error: expected ';' after expression
rtx v100; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2534:5: error: use of undeclared identifier 'v100'; did you mean 'v10'?
rtx v100; // rax 
    ^~~~
    v10
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2444:26: note: 'v10' declared here
 struct basic_block_def *v10; // r14 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/ifcvt.c:2538:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v104; // edi 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_if_header/src/obj/ifcvt.o] Error 1
